# s7

./: .gitignore  dev.org  meson.build  meson_options.txt  mus-config.h.in
subprojects/: notcurses.wrap
